Actualizacion de Campos, y se agrega la Vista Procesos Demandados

--- a/app/views/informes/_filtros_demora.html.erb
+++ b/app/views/informes/_filtros_demora.html.erb
@@ -1,26 +1,28 @@
-	<div class="well">
-		<%= link_to icon_tag('Volver', :class => 'icon-arrow-left icon-white'), informes_path, class: 'btn btn-primary' %>
-	</div>
-	<h1>Informes: Demora</h1>
+<div class="well">
+  <%= link_to icon_tag('Volver', :class => 'icon-arrow-left icon-white'), informes_path, class: 'btn btn-primary' %>
+  </div>
+  <h1>Informes: Demora</h1>
 
-	<%= simple_form_for controller_name, :method => :get do |f| %>
+  <%= simple_form_for controller_name, :method => :get do |f| %>
 
-	<%= f.input 'tipo', :collection => {'No Culminado' => 'no_culminado', 'Culminado' => 'culminado'}, :prompt => '-- Seleccione --', :label => 'Tipo' %>
-	<%= f.input 'procedimiento', :collection => Procedimiento.all, :prompt => '-- Seleccione --', :label_method => :nombre, :label => 'Procedimiento' %>
+    <%= f.input 'tipo', :collection => {'No Culminado' => 'no_culminado', 'Culminado' => 'culminado'}, :prompt => '-- Seleccione --', :label => 'Tipo' %>
+    <%= f.input 'procedimiento', :collection => Procedimiento.all, :prompt => '-- Seleccione --', :label_method => :nombre, :label => 'Procedimiento' %>
 
-	<!--En caso de un procedmimiento-->
-	<%= f.input 'usuario', :collection => Usuario.all, :label_method => :login, :prompt => '-- Seleccione --', :label => "Usuario" %>
-	<!-- Deberia de ser por cargo_estructura -->
-	<%= f.input 'usuario', :collection => CargoEstructura.all, :label_method => :cargo_id, :prompt => '-- Seleccione --', :label => "Funcion" %>
-	
-	
+    <!--En caso de un procedmimiento-->
+    <%= f.input 'usuario', :collection => Usuario.all, :label_method => :login, :prompt => '-- Seleccione --', :label => "Usuario" %>
+    <!-- Deberia de ser por cargo_estructura -->
+    <%= f.input 'estructura', :collection => Estructura.all, :label_method => :nombre, :prompt => '-- Seleccione --', :label => "Estructura", input_html:  {id: 'estructura_id'}%>
+    <%= f.input 'cargo', :collection => Cargo.all, :label_method => :nombre, :prompt => '-- Seleccione --', :label => "Cargo", input_html:  {id: 'cargo_id'} %>
+    <%= linked_combo 'cargo_id', :linked => 'estructura_id', :param => 'estructura_id', :url => '/cargos.json' %>
 
-	<%= f.input 'rango', :label => 'Rango en Anhos' %>
 
-	<%= f.hidden_field 'filtro', :value => 'demora'%>
 
-	<div class="form-actions">
-		<%= f.button :submit, 'Buscar', class: 'btn btn-success' %>
-	</div>
+    <%= f.input 'rango', :label => 'Rango en Anhos' %>
 
-	<% end %>
+    <%= f.hidden_field 'filtro', :value => 'demora'%>
+
+    <div class="form-actions">
+      <%= f.button :submit, 'Buscar', class: 'btn btn-success' %>
+      </div>
+
+    <% end %>
