--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
                 dayNamesShort: ['Dom','Lun','Mar','Mi&eacute;','Juv','Vie','S&aacute;b'],
                 dayNamesMin: ['Do','Lu','Ma','Mi','Ju','Vi','S&aacute;'],
                 weekHeader: 'Sm',
-//                dateFormat: 'dd/mm/yy',
+                dateFormat: 'yy-mm-dd',
                 firstDay: 1
         })
       })
