cambiar el nombre del resultado cantidad a cant_expedientes

--- a/app/views/informes/_filtros_demanda.html.erb
+++ b/app/views/informes/_filtros_demanda.html.erb
@@ -42,7 +42,7 @@
 	</script>
 <% else %>
         <% @resultados.each  do |f| %>
-        <p><%= f.cantidad %> </p>
+        <p><%= f.cant_expedientes %> </p>
         <p><%= f.tiempo %> </p>
         <% end %>
 <% end %>
