--- a/app/views/informes/_filtros_demanda.html.erb
+++ b/app/views/informes/_filtros_demanda.html.erb
@@ -41,6 +41,38 @@
         }
       </script>
     <% else %>
+      <script type="text/javascript" charset="utf-8">
+  $(function() {
+    new Highcharts.Chart({
+      chart: {
+        renderTo: "chart"
+      },
+      title: {
+        text: "Procesos Mas Demandados"
+      },
+      xAxis: {
+        type: "datetime"
+      },
+      yAxis: {
+        title: {
+          text: "Cantidad"
+        }
+      },
+      tooltip: {
+        formatter: function() {
+          return Highcharts.dateFormat("%B %e, %Y", this.x) + ': ' +
+            "$" + Highcharts.numberFormat(this.y, 2);
+        }
+      },
+      series: [{
+          data: [1,2,3,4]
+      }]
+    });
+  });
+</script>
+      
+      <div id="chart" style="width: 560px; height: 300px;"></div>
+      
       <table>
         <thead>
           <tr>
