--- a/app/views/informes/index.html.erb
+++ b/app/views/informes/index.html.erb
@@ -1,20 +1,14 @@
 <section>
-	<div class="page-header">
-		<h1>Informes <small> Datos estadisticos</small></h1>
-	</div>
+  <div class="page-header">
+    <h1>Informes <small> Datos estadisticos</small></h1>
+  </div>
 
-	<br />
+  <br />
 
-	<div>
-		<p><%= link_to "Tiempo promedio de expedientes", mostrar_formulario_path('promedio') %></p>
-		<p><%= link_to "Demora de expedientes", mostrar_formulario_path('demora') %></p>
-		<p><%= link_to "Demanda de procesos", mostrar_formulario_path('demanda') %></p>
-		<p><%= link_to "Resumen de expedientes (conteo por estados)", mostrar_formulario_path('resumen')%></p>
-		<p><%#= link_to "Procesos menos demandados", "#" %></p>
-		<p><%#= link_to "Expedientes procesados", "#" %></p>
-		<p><%#= link_to "Expedientes entregados", "#" %></p>
-		<p><%#= link_to "Expedientes archivados", "#" %></p>
-		<p><%#= link_to "Expedientes cancelados", "#" %></p>
-		<p><%#= link_to "Expedientes en proceso", "#" %></p>
-	</div>
+  <div>
+    <p><%= link_to "Tiempo promedio de expedientes", mostrar_formulario_path('promedio') %></p>
+    <p><%= link_to "Demora de expedientes", form_demora_path %></p>
+    <p><%= link_to "Demanda de procesos", form_demanda_path %></p>
+    <p><%= link_to "Rendimiento del Personal", form_rendimiento_path %></p>
+  </div>
 </section>
