--- a/app/views/consultas/show.html.erb
+++ b/app/views/consultas/show.html.erb
@@ -32,33 +32,89 @@
     <b>Fecha Creacion:</b>
     <%= @expediente.created_at %>
   </p>
+
+  <p>
+    <b>Fecha Entrega:</b>
+    <%= @tiempo_entrega.present? ? @tiempo_entrega.strftime("%Y-%m-%d %H:%M") : 'No hay datos para mostrar'%>
+  </p>
   <fieldset>
     <legend>Historial del Expediente</legend>
-    <table class="table table-striped table-bordered table-condensed">
-      <thead>
-        <tr>
-          <th>Tarea</th>
-          <th>Fecha Inicio</th>
-          <th>Fecha Fin</th>
-          <th>Actividad</th>
-          <th>Procedimiento</th>
-          <th>Dependencia</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @tareas_expedientes.each do |f| %>
-        <tr>
-          <td><%= f.tarea.nombre %></td>
-          <td><%= f.fecha_inicio %></td>
-          <td><%= f.fecha_fin %></td>
-          <td><%= f.tarea.actividad.nombre %></td>
-          <td><%= f.tarea.actividad.procedimiento.nombre %></td>
-          <td><%= f.tarea.estructura.nombre %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
+    <div class="row">
+      <div class="span11">
+        <ul class="nav nav-tabs" id="tab">
+          <li class="active"><%= link_to 'Tareas realizadas', '#tab-tareas', 'data-togle' => 'tab' %></li>
+          <li><%= link_to 'Tareas a realizar', '#tab-tareas-realizar', 'data-togle' => 'tab' %></li>
+        </ul>
+      </div>
+      <div class="span11">
+        <div id="tabContent" class="tab-content">                
+          <div id="tab-tareas" class="tab-pane active">
+            <table class="table table-striped table-bordered table-condensed">
+              <thead>
+                <tr>
+                  <th>Tarea</th>
+                  <th>Fecha Inicio</th>
+                  <th>Fecha Fin</th>
+                  <th>Actividad</th>
+                  <th>Procedimiento</th>
+                  <th>Dependencia</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @tareas_expedientes.each do |f| %>
+                <tr>
+                  <td><%= f.tarea.nombre %></td>
+                  <td><%= f.fecha_inicio %></td>
+                  <td><%= f.fecha_fin %></td>
+                  <td><%= f.tarea.actividad.nombre %></td>
+                  <td><%= f.tarea.actividad.procedimiento.nombre %></td>
+                  <td><%= f.tarea.estructura.nombre %></td>
+                </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+          <div id="tab-tareas-realizar" class="tab-pane">
+            <table class="table table-striped table-bordered table-condensed">
+              <thead>
+                <tr>
+                  <th>Tarea</th>
+                  <th>Duracion</th>
+                  <th>Actividad</th>
+                  <th>Procedimiento</th>
+                  <th>Dependencia</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @tareas.each do |t| %>
+                <tr>
+                  <td><%= t.nombre %></td>
+                  <td><%= t.tiempo_ejecucion.to_s + " " + t.unidad_tiempo.simbolo %></td>
+                  <td><%= t.actividad.nombre %></td>
+                  <td><%= t.actividad.procedimiento.nombre %></td>
+                  <td><%= t.estructura.nombre %></td>
+                </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>                               
+        </div>              
+      </div>
+    </div>
 
   </fieldset>
 
 </section>
+<% content_for :javascripts do %>
+<script type="text/javascript">
+$('#tab a').click(function (e) {
+  e.preventDefault();
+  $(this).tab('show');
+});
+
+$('#tabDocs a').click(function (e) {
+  e.preventDefault();
+  $(this).tab('show');
+})
+</script>  
+<% end %>
