--- a/app/views/tiempos_demorados/_reporte_601.html.erb
+++ b/app/views/tiempos_demorados/_reporte_601.html.erb
@@ -1,7 +1,7 @@
   <div class="page-header">
     <h1>Tiempos demorados <small>por procedimientos</small></h1>
   </div>
-
+    <p><%= link_to 'volver', tiempos_demorados_path %></p>
   <br />
 
 <%#= params[:fecha1] %><br />
@@ -10,23 +10,33 @@
 
 
 
+
+
 <% if @tiempos_demorados.present? %>
     <table class="table table-striped table-bordered table-condensed">
       <tr>
-              <th>ctiempo</th>
-              <th>cnombres</th>
-              <th>capellidos</th>
+        <th>Expediente</th>
+        <th>Registrado</th>
+        <th>Demorado</th>
+        <th>Estimado</th>
+        <th>Tiempo(+/-)</th>
+        <th>Funcionario</th>
       </tr>
       <% @tiempos_demorados.each do |tiempo_demorado| %>
         <tr>
-          <td><%= tiempo_demorado.ctiempo %></td>
-          <td><%= tiempo_demorado.cnombres %></td>
-          <td><%= tiempo_demorado.capellidos %></td>
+
+          <td><%= tiempo_demorado.cnumero %> - <%= tiempo_demorado.cid %></td>
+          <td><%= tiempo_demorado.cfecha_inicio %></td>
+          <td><%= tiempo_demorado.cminutos_demorados %></td>
+          <td><%= tiempo_demorado.cminutos_estimados %></td>
+          <td><%= tiempo_demorado.cminutos %></td>
+          <td><%= tiempo_demorado.cfuncionario %></td>
+
         </tr>
       <% end %>
     </table> 
   <% else %>
     <p class="alert-message warning">
-      Todavía no hay tipos_documentos, <%= link_to 'agregar', tiempos_demorados_path %>.
+      No hay datos, <%= link_to 'volver', tiempos_demorados_path %>.
     </p>
   <% end %>
