--- a/app/views/tiempos_demorados/_reporte_602.html.erb
+++ b/app/views/tiempos_demorados/_reporte_602.html.erb
@@ -1,32 +1,33 @@
   <div class="page-header">
-    <h1>Tiempos demorados <small>por procedimientos</small></h1>
+    <h1>Expedientes Pendientes<small> por cargos</small></h1>
   </div>
-
-  <br />
-
-<%#= params[:fecha1] %><br />
-<%#= params[:fecha2] %><br />
-<%#= params[:procedimineto_id] %><br />
-
-
+    <p><%= link_to 'volver', tiempos_demorados_path %></p>
 
 <% if @tiempos_demorados.present? %>
     <table class="table table-striped table-bordered table-condensed">
       <tr>
-              <th>ctiempo</th>
-              <th>cnombres</th>
-              <th>capellidos</th>
+        <th>Expediente</th>
+        <th>Registrado</th>
+        <th>Tiempo de Proceso</th>
+        <th>Tiempo Estimado</th>
+        <th>Tiempo de Demora(+/-)</th>
+        <th>Funcionario</th>
       </tr>
       <% @tiempos_demorados.each do |tiempo_demorado| %>
         <tr>
-          <td><%= tiempo_demorado.ctiempo %></td>
-          <td><%= tiempo_demorado.cnombres %></td>
-          <td><%= tiempo_demorado.capellidos %></td>
+
+          <td><%= tiempo_demorado.cnumero %> - <%= tiempo_demorado.cid %></td>
+          <td><%= tiempo_demorado.cfecha_inicio %></td>
+          <td><%= tiempo_demorado.cminutos_demorados %></td>
+          <td><%= tiempo_demorado.cminutos_estimados %></td>
+          <td><%= tiempo_demorado.cminutos %></td>
+          <td><%= tiempo_demorado.cfuncionario %></td>
+
         </tr>
       <% end %>
     </table> 
   <% else %>
     <p class="alert-message warning">
-      Todavía no hay tipos_documentos, <%= link_to 'agregar', tiempos_demorados_path %>.
+      No hay datos, <%= link_to 'volver', tiempos_demorados_path %>.
     </p>
   <% end %>
