--- a/app/views/tiempos_demorados/_reporte_605.html.erb
+++ b/app/views/tiempos_demorados/_reporte_605.html.erb
@@ -1,5 +1,5 @@
   <div class="page-header">
-    <h1>Expedientes Pendientes<small> por procedimientos</small></h1>
+    <h1>Expedientes Terminados<small> por cargos</small></h1>
   </div>
     <p><%= link_to 'volver', tiempos_demorados_path %></p>
 
