--- a/app/views/tiempos_demorados/listar.html.erb
+++ b/app/views/tiempos_demorados/listar.html.erb
@@ -1,9 +1,17 @@
 <section>
 
-<% if params[:tiempos_demorados][:filtro]=="1" then %>
+<% if params[:tiempos_demorados][:expediente]=="2" and params[:tiempos_demorados][:filtro]=="1" then %>
 <%= render 'reporte_601' %>
-<% elsif params[:tiempos_demorados][:filtro]=="2" then %>
+<% elsif params[:tiempos_demorados][:expediente]=="2" and params[:tiempos_demorados][:filtro]=="2" then %>
 <%= render 'reporte_602' %>
+<% elsif params[:tiempos_demorados][:expediente]=="2" and params[:tiempos_demorados][:filtro]=="3" then %>
+<%= render 'reporte_603' %>
+<% elsif params[:tiempos_demorados][:expediente]=="1" and params[:tiempos_demorados][:filtro]=="1" then %>
+<%= render 'reporte_604' %>
+<% elsif params[:tiempos_demorados][:expediente]=="1" and params[:tiempos_demorados][:filtro]=="2" then %>
+<%= render 'reporte_605' %>
+<% elsif params[:tiempos_demorados][:expediente]=="1" and params[:tiempos_demorados][:filtro]=="3" then %>
+<%= render 'reporte_606' %>
 <% end %>
 
 </section>
